@@ -4,6 +4,7 @@ import com.databricks.jdbc.client.impl.DatabricksSdkClient;
 import com.databricks.jdbc.driver.DatabricksConnectionContext;
 import com.databricks.jdbc.driver.IDatabricksConnectionContext;
 import com.databricks.sdk.service.sql.*;
+import com.google.common.collect.ImmutableList;
 import org.apache.arrow.memory.RootAllocator;
 import org.apache.arrow.vector.FieldVector;
 import org.apache.arrow.vector.Float8Vector;
@@ -16,6 +17,7 @@ import org.apache.arrow.vector.types.Types;
 import org.apache.arrow.vector.types.pojo.Field;
 import org.apache.arrow.vector.types.pojo.FieldType;
 import org.apache.arrow.vector.types.pojo.Schema;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
@@ -57,14 +59,14 @@ public class ArrowStreamResultTest {
     @Mock
     StatementExecutionService statementExecutionService;
 
-    /*
-    If running into Arrow memory buffer error, run with jvm argument --add-opens java.base/java.nio=ALL-UNNAMED
-    i.e. mvn test -DargLine="--add-opens java.base/java.nio=ALL-UNNAMED"
-     */
+    @BeforeEach
+    public void setup() throws Exception {
+        setupChunks();
+    }
+
     @Test
     public void testIteration() throws Exception {
         // Arrange
-        setupChunks();
         ResultManifest resultManifest = new ResultManifest()
                 .setTotalChunkCount((long) this.numberOfChunks)
                 .setTotalRowCount(this.numberOfChunks * 110L)
@@ -92,13 +94,53 @@ public class ArrowStreamResultTest {
 
         // Act & Assert
         for(int i = 0; i < this.numberOfChunks; ++i) {
-            for(int j = 0; j < this.rowsInChunk; ++j) {
+            // Since the first row of the chunk is null
+            for(int j = 0; j < (this.rowsInChunk); ++j) {
                 assertTrue(result.hasNext());
                 assertTrue(result.next());
             }
         }
         assertFalse(result.hasNext());
         assertFalse(result.next());
+        mocked.close();
+    }
+
+    @Test
+    public void testGetObject() throws Exception {
+        // Arrange
+        ResultManifest resultManifest = new ResultManifest()
+                .setTotalChunkCount((long) this.numberOfChunks)
+                .setTotalRowCount(this.numberOfChunks * 110L)
+                .setTotalByteCount(1000L)
+                .setChunks(this.chunkInfos)
+                .setSchema(new ResultSchema().setColumns(ImmutableList.of(new ColumnInfo().setTypeName(ColumnInfoTypeName.INT), new ColumnInfo().setTypeName(ColumnInfoTypeName.DOUBLE))));
+
+        ResultData resultData = new ResultData()
+                .setExternalLinks(getChunkLinks(0L, false));
+
+        IDatabricksConnectionContext connectionContext = DatabricksConnectionContext.parse(JDBC_URL, new Properties());
+        DatabricksSession session = new DatabricksSession(connectionContext,
+                new DatabricksSdkClient(connectionContext, statementExecutionService));
+
+        MockedConstruction<ChunkDownloader> mocked = Mockito.mockConstruction(ChunkDownloader.class, (mock, context) -> {
+            Mockito.when(mock.getChunk(anyLong())).thenAnswer(new Answer<ArrowResultChunk>() {
+                @Override
+                public ArrowResultChunk answer(InvocationOnMock invocation) {
+                    long index = invocation.getArgument(0);
+                    return resultChunks.get((int) index);
+                }
+            });
+        });
+        ArrowStreamResult result = new ArrowStreamResult(resultManifest, resultData, "statement_id", session);
+
+        result.next();
+        Object objectInFirstColumn = result.getObject(0);
+        Object objectInSecondColumn = result.getObject(1);
+
+        assertTrue(objectInFirstColumn instanceof Integer);
+        assertTrue(objectInSecondColumn instanceof Double);
+
+        mocked.close();
     }
 
     private void setupChunks() throws Exception {
@@ -135,15 +177,15 @@ public class ArrowStreamResultTest {
                 if(type.equals(Types.MinorType.INT)) {
                     IntVector intVector = (IntVector) fieldVector;
                     intVector.setInitialCapacity(rowsToAddToRecordBatch);
-                    for(int k = 1; k < rowsToAddToRecordBatch; k++) {
+                    for(int k = 0; k < rowsToAddToRecordBatch; k++) {
                         intVector.set(k, 1, (int) testData[i][j + k]);
                     }
                 }
                 else if(type.equals(Types.MinorType.FLOAT8)) {
                     Float8Vector float8Vector = (Float8Vector) fieldVector;
                     float8Vector.setInitialCapacity(rowsToAddToRecordBatch);
-                    for(int k = 1; k < rowsToAddToRecordBatch; k++) {
-                        float8Vector.set(k, 1, (double) testData[i][j + k]);
+                    for(int currentRow = 0; currentRow < rowsToAddToRecordBatch; currentRow++) {
+                        float8Vector.set(currentRow, 1, (double) testData[i][j + currentRow]);
                     }
                 }
                 fieldVector.setValueCount(rowsToAddToRecordBatch);
